--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+ 
+:root, html, body {
+  --font-geist-sans: Geist-Sans, sans-serif;
+  --font-geist-mono: Geist-Mono, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+html,
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  padding: 0;
+  margin: 0;
+  font-family: var(--font-geist-sans);
+  background-color: rgb(192, 209, 255);
 }
